# CGlauber-legacy

./: CMakeLists.txt  GlauberConst.hh  README.md
FermiMomentum/: FermiMomentum.cc  FermiMomentum.hh
TGlauber/: TGlauNucleus.cc
Wrapper/: CGlauber.hh  CGlauberFactory.cc  CGlauberGenerator.cc  CGlauberGenerator.hh
cmake/: CGlauberConfig.cmake.in
data/: CGlauberConfig.cmake.in
include/: CGlauberFactory.hh  CGlauberGenerator.hh
src/: CGlauberFactory.cc  CGlauberGenerator.cc  TGlauNucleus.cc
